--- a/skeleton_repo.html
+++ b/skeleton_repo.html
@@ -79,6 +79,7 @@ ul.task-list li input[type="checkbox"] {
 <h4 class="anchored" data-anchor-id="question-1">Question #1</h4>
 <p>William is a student at the University of Chicago. William just finished taking three classes during the fall quarter, and needs help calculating and visualizing his GPA. The University of Chicago uses a standard A-grade conversion scale, where an ‘A’ equals a 4.00 GPA. William’s classes and grades are as follows:</p>
 <p><strong>Causal Inference</strong>: A- <strong>Introduction to Python Programming</strong>: B <strong>From Data to Manuscript in R</strong>: B+</p>
+<p>To answer this question, I need to…</p>
 <ol type="1">
 <li>Make a data frame with William’s class, grade and quarter information.</li>
 <li>Convert William’s letter grades to a numeric GPA using the standard A-grade conversion scale.</li>
@@ -150,11 +151,12 @@ dbl (1): Numeric
 <li>Matthew had a 3.13 GPA, scored 154 on the LSAT, and participated in 3 extracurricular activities. He currently makes $76,000 as a supermarket manager.</li>
 <li>Connor had a 3.31 GPA, scored 162 on the LSAT, and participated in 5 extracurricular activities. He currently makes $58,020 as a mortgage analyst.</li>
 </ul>
+<p>To answer this question? I need to…</p>
 <ol type="1">
 <li>Make a data frame including each person’s name, GPA, LSAT, extracurricular activity participation, salary and law school status as columns.</li>
 <li>Run a regression to determine whether there are any significant predictors of salary.</li>
-<li>Plot your desired model and impose a line of best fit.</li>
-<li>Write up the results of your regression analysis.</li>
+<li>Plot my desired model and impose a line of best fit.</li>
+<li>Write up the results of my regression analysis.</li>
 </ol>
 <div class="cell" data-layout-align="center">
 <div class="cell-output cell-output-stdout">
@@ -210,12 +212,13 @@ F-statistic: 16.48 on 1 and 7 DF,  p-value: 0.004814</code></pre>
 </section>
 <section id="question-4" class="level4">
 <h4 class="anchored" data-anchor-id="question-4">Question #4</h4>
-<p>William has three other friends that are medical doctors. Their information are as follows:</p>
+<p>William has three other friends that are medical doctors. How would they compare on salary? Their information are as follows:</p>
 <ul>
 <li>Tyrell had a 3.91 GPA, never took the LSAT, and participated in 5 extracurricular activities. He currently makes $388,267 as a cardiologist.</li>
 <li>Savannah had a 3.85 GPA, never took the LSAT, and participated in 4 extracurricular activities. She currently makes $422,001 as an oncologist.</li>
 <li>Gerald had a 3.89 GPA, never took the LSAT, and participated in 3 extracurricular activities. He currently makes $543,022 as a dermatologist.</li>
 </ul>
+<p>To answer this question, I need to…</p>
 <ol type="1">
 <li>Add William’s doctor friends to the data frame.</li>
 <li>Perform an ANOVA to determine whether there are differences in salary between lawyers, doctors, and non-lawyers or non-doctors.</li>
